--- a/chat.html
+++ b/chat.html
@@ -364,7 +364,7 @@
     
     <script>
         // ========== КОНФИГУРАЦИЯ ==========
-        const API_URL = 'https://your-api.com'; // Замените на ваш API
+        const API_URL = 'https://laughing-space-fiesta-sZyupSqggg4rc65fv-3000.app.github.dev'; // Замените на ваш API
         const tg = Telegram.WebApp;
         let currentChat = null;
         let messages = [];
