--- a/index.html
+++ b/index.html
@@ -9,140 +9,8 @@
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
   />
 
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
-  <style>
-    :root {
-      --tg-theme-bg-color: #f4fff7;
-      --tg-theme-text-color: #063b1f;
-      --siamatch-green: #16a34a;
-      --siamatch-green-dark: #15803d;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      padding: 20px;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
-      background: radial-gradient(circle at top, #d9f99d 0, #f4fff7 45%, #ecfdf3 100%);
-      color: var(--tg-theme-text-color);
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-
-    .logo {
-      font-size: 40px;
-      margin-bottom: 8px;
-    }
-
-    .app-name {
-      font-size: 18px;
-      font-weight: 600;
-      color: var(--siamatch-green-dark);
-      margin-bottom: 4px;
-    }
-
-    h1 {
-      font-size: 24px;
-      margin: 4px 0 8px;
-    }
-
-    #username {
-      font-size: 16px;
-      margin-bottom: 18px;
-    }
-
-    #card {
-      width: 100%;
-      max-width: 420px;
-      background: rgba(255, 255, 255, 0.9);
-      border-radius: 24px;
-      padding: 20px 18px 24px;
-      box-shadow: 0 10px 25px rgba(22, 163, 74, 0.18);
-      backdrop-filter: blur(8px);
-    }
-
-    #profile-form {
-      display: none;
-      width: 100%;
-      text-align: left;
-      margin-top: 10px;
-    }
-
-    #profile-form h2 {
-      font-size: 20px;
-      margin-bottom: 10px;
-      text-align: center;
-      color: var(--siamatch-green-dark);
-    }
-
-    label {
-      display: block;
-      font-size: 14px;
-      margin-bottom: 4px;
-    }
-
-    input[type="number"],
-    select,
-    textarea {
-      width: 100%;
-      padding: 9px 10px;
-      font-size: 14px;
-      border-radius: 10px;
-      border: 1px solid #bbf7d0;
-      outline: none;
-      background-color: #f0fdf4;
-    }
-
-    input[type="number"]:focus,
-    select:focus,
-    textarea:focus {
-      border-color: var(--siamatch-green);
-      box-shadow: 0 0 0 1px rgba(22, 163, 74, 0.35);
-    }
-
-    textarea {
-      resize: none;
-    }
-
-    .field {
-      margin-bottom: 12px;
-    }
-
-    .hint {
-      font-size: 12px;
-      opacity: 0.7;
-      margin-top: 2px;
-    }
-
-    #mainButton {
-      background: linear-gradient(135deg, #22c55e, #16a34a);
-      color: #ffffff;
-      border: none;
-      padding: 13px 32px;
-      font-size: 17px;
-      border-radius: 999px;
-      cursor: pointer;
-      user-select: none;
-      transition: transform 0.1s ease, box-shadow 0.1s ease, background 0.2s.ease;
-      margin-top: 18px;
-      width: 100%;
-      max-width: 260px;
-    }
-
-    #mainButton:active {
-      transform: translateY(1px);
-      box-shadow: 0 4px 10px rgba(22, 163, 74, 0.35);
-      background: linear-gradient(135deg, #16a34a, #15803d);
-    }
-  </style>
+  <!-- Общие стили приложения -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div id="card">
@@ -185,104 +53,8 @@
     <button id="mainButton">Продолжить 🍀</button>
   </div>
 
-  <script>
-    Telegram.WebApp.ready();
-    Telegram.WebApp.expand();
-
-    const theme = Telegram.WebApp.themeParams || {};
-    if (theme.bg_color) {
-      document.documentElement.style.setProperty("--tg-theme-bg-color", theme.bg_color);
-    }
-    if (theme.text_color) {
-      document.documentElement.style.setProperty("--tg-theme-text-color", theme.text_color);
-    }
-
-    const user = Telegram.WebApp.initDataUnsafe
-      ? Telegram.WebApp.initDataUnsafe.user
-      : null;
-
-    const usernameElem = document.getElementById("username");
-    const profileForm = document.getElementById("profile-form");
-    const mainBtn = document.getElementById("mainButton");
-
-    function loadProfileFromStorage() {
-      try {
-        const raw = localStorage.getItem("siamatch_profile");
-        if (!raw) return null;
-        return JSON.parse(raw);
-      } catch (e) {
-        console.error("Failed to parse profile from storage", e);
-        return null;
-      }
-    }
-
-    function saveProfileToStorage(profile) {
-      try {
-        localStorage.setItem("siamatch_profile", JSON.stringify(profile));
-      } catch (e) {
-        console.error("Failed to save profile", e);
-      }
-    }
-
-    if (user) {
-      const name = user.first_name || user.username || "друг";
-      usernameElem.textContent = `Привет, ${name}!`;
-    } else {
-      usernameElem.textContent = "Информация о пользователе недоступна.";
-    }
-
-    const storedProfile = loadProfileFromStorage();
-    if (storedProfile) {
-      profileForm.style.display = "block";
-      document.getElementById("age").value = storedProfile.age || "";
-      document.getElementById("gender").value = storedProfile.gender || "other";
-      document.getElementById("bio").value = storedProfile.bio || "";
-      mainBtn.textContent = "Сохранить профиль 🍀";
-      mainBtn.onclick = saveProfile;
-    } else {
-      mainBtn.onclick = () => {
-        profileForm.style.display = "block";
-        mainBtn.textContent = "Сохранить профиль 🍀";
-        mainBtn.onclick = saveProfile;
-      };
-    }
-
-    function saveProfile() {
-      const ageValue = Number(document.getElementById("age").value);
-      const gender = document.getElementById("gender").value;
-      const bio = document.getElementById("bio").value.trim();
-
-      if (!ageValue || ageValue < 18 || ageValue > 99) {
-        alert("Укажите возраст от 18 до 99 лет");
-        return;
-      }
-
-      if (bio.length < 10) {
-        alert("Напишите о себе хотя бы 10 символов");
-        return;
-      }
-
-      const profileData = {
-        tg_id: user ? user.id : null,
-        first_name: user ? user.first_name : null,
-        username: user ? user.username : null,
-        age: ageValue,
-        gender,
-        bio
-      };
-
-      console.log("Profile data:", profileData);
-      saveProfileToStorage(profileData);
-
-      // Заглушка под будущий запрос на бэкенд
-      // TODO: заменить на реальный fetch к Node/Postgres серверу
-      // sendProfileToServer(profileData);
-
-      alert("Профиль сохранён! Дальше добавим ленту знакомств и мэтчи 🍀");
-    }
-
-    /*
-    async function sendProfileToServer(profile) {
-      try {
-        const resp = await fetch("https://your-backend-url/api/profile", {
-          method: "POST",
+  <!-- Telegram WebApp SDK и логика приложения -->
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="app.js"></script>
+</body>
+</html>
