--- a/admin.html
+++ b/admin.html
@@ -284,6 +284,7 @@
     const resultsInfo = document.getElementById("results-info");
     const usersList = document.getElementById("users-list");
 
+    // Демо-пользователи
     const demoUsers = [
       {
         id: 1,
@@ -416,3 +417,5 @@
       }
     })();
   </script>
+</body>
+</html>
