--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="field">
           <label for="gender">Пол</label>
-          <select id="gender">
+          <select id="gender" required>
             <option value="">Выберите пол</option>
             <option value="male">Мужской</option>
             <option value="female">Женский</option>
